remove faker logger and lombok